<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.contato.ContatoFragment">

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/input_layout_name"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contato_nome_hint"
            android:inputType="textCapSentences"/>
   </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_celular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/input_layout_name"
        app:layout_constraintStart_toStartOf="@id/input_layout_name"
        app:layout_constraintTop_toBottomOf="@id/input_layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contato_celular_hint"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/input_layout_celular"
        app:layout_constraintStart_toStartOf="@id/input_layout_celular"
        app:layout_constraintTop_toBottomOf="@id/input_layout_celular">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contato_email_hint"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_contato"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/holo_purple"
        android:layout_marginTop="16dp"
        android:text="@string/contato_button_add"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_email"
        app:layout_constraintStart_toStartOf="@id/input_layout_email"
        app:layout_constraintTop_toBottomOf="@id/input_layout_email"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_delete"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_marginTop="16dp"
        android:text="@string/contato_button_delete"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_email"
        app:layout_constraintStart_toStartOf="@id/input_layout_email"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>